refactoring, cleanup and add tests

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -4,18 +4,19 @@ INCLUDE = ../
 
 CC = clang++
 
-CFLAGS = -Wall -Wextra -Werror
+CFLAGS = -Wall -Wextra -Werror -g
 
 HEADER = test.hpp
 
-SRC = test.cpp vector_test.cpp stack_test.cpp queue_test.cpp map_test.cpp
+SRC = test.cpp vector_test.cpp stack_test.cpp queue_test.cpp map_test.cpp list_test.cpp
 
 OBJ = $(SRC:.cpp=.o)
 
 all: $(NAME)
 
 $(NAME): $(OBJ) $(INCLUDE) $(HEADER)
-	$(CC) $(CFLAGS) $(OBJ)
+	$(CC) $(CFLAGS) $(OBJ) -o $(NAME)
+
 %.o : %.cpp
 	$(CC) $(CFLAGS) -I $(INCLUDE) -c $< -o $@
 
